# student_diary

./: .env  .gitignore  pyproject.toml  pytest.ini
src/: db.sqlite3  manage.py  test_mail.py
src/apps/api_auth/: permissions.py  serializers.py  tests.py  urls.py  views.py
src/apps/base/api/: mixins.py
src/apps/diaries/: admin.py
src/apps/diaries/api/: serializers.py  urls.py  views.py  views_diaries.py
src/apps/diaries/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0003_remove_diary_diaries_diary_student_diary_only_for_students_and_more.py
src/apps/diaries/models/: __init__.py  diaries.py
src/apps/diaries/tests/: test_create_diary.py
src/apps/stud/: admin.py  apps.py  const.py  forms.py  models.py
src/apps/stud/migrations/: 0001_initial.py  0002_alter_customuser_managers_customuser_birth_date.py  0002_customuser_birth_date.py  0002_teacherprofile_user_delete_allinfo_and_more.py  0003_alter_user_profile_photo.py  0004_user_birth_date.py  0005_remove_user_birth_date_user_birthday.py  0006_subject_alter_teacherprofile_options_and_more.py  0007_alter_class_options_alter_subject_options_and_more.py  0008_rename_attendante_diaryrecord_attendance.py  0009_alter_class_grade_alter_class_name.py  0010_lesson.py  0011_alter_lesson_options_alter_class_name_and_more.py  0012_alter_class_grade_alter_class_name_and_more.py  0013_alter_class_grade_alter_class_name_and_more.py
src/apps/student_diary/: admin.py  apps.py
src/apps/student_diary/api/: permissions.py  serializers.py  urls.py  views.py
src/apps/student_diary/migrations/: 0001_initial.py  0002_initial.py  0003_alter_studentdiary_note.py
src/apps/student_diary/models/: __init__.py  student_diary.py
src/apps/study/: admin.py
src/apps/users/: admin.py  apps.py  const.py  forms.py  managers.py  signals.py
src/studdiary/: asgi.py  settings.py  urls.py  wsgi.py
studentdiary/: README.md
(+57 files in other folders)
